# githelp

./: .buildinfo  LICENSE  MANIFEST.in  README.md  api.html  cli.html  developer_doc.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  user_doc.html
.github/workflows/: publish_docs.yml
_sources/: developer_doc.md.txt
docs/: api.md  cli.md  conf.py  developer_doc.md  index.md  user_doc.md
src/githelp/: cli.py  greeter.py  ollama.py  overlays.py
src/githelp/data/overlays/: pull.yml  tips.yml
